# py-electrolux-ocp

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  apiClient.py  apiModels.py  getCapabilitiesTODO.py  gigyaClient.py  oneAppApi.py  pyproject.toml  setup.py  urls.py  webSocketClient.py
.devcontainer/: devcontainer.json
.github/: publish-workflow.yml
.github/workflows/: flake8.yml  publish-workflow.yml  ruff-lint.yml
examples/: exampleApplianceCapabilitiesResponse1.json  exampleApplianceInfoResponse1.json  exampleApplianceStateResponse1.json  exampleAppliancesListIncludeMetadataResponse1.json  exampleAppliancesListResponse1.json  exampleUsersCurrentResponse1.json  exampleWebsocketResponse1.json  exampleWebsocketResponse2.json  exampleWebsocketResponse3.json  exampleWebsocketResponse4.json  exampleWebsocketResponse5.json
src/py-electrolux-ocp/: apiClient.py  apiModels.py
src/pyelectroluxocp/: __init__.py  apiClient.py  const.py  getCapabilitiesTODO.py  gigyaClient.py  gigyaModels.py  oneAppApi.py  oneAppApiClient.py  urls.py  webSocketClient.py
